# UPL-goal-timing

./: .gitignore  AGENTS.md  README.md  REFACTORING_SUMMARY.md  analysis.ipynb  cleaning.ipynb  football.db  pyproject.toml  requirements.txt  scraping.ipynb  upl_goals_2019_2025_final.csv  upl_goals_2020_21.csv  upl_goals_2023_24.csv  upl_goals_2024_25.csv
.github/: copilot-instructions.md
data/: upl_goals_2019_20.csv  upl_goals_2019_2025_cleaned.csv  upl_goals_2021_22.csv  upl_goals_2022_23.csv  upl_goals_2025_26.csv
docs/: PROJECT_ROADMAP.md
notebooks/: analysis.ipynb  cleaning.ipynb  scraping.ipynb
notebooks/features/feature_01_goal_timing/: analysis_v2.ipynb
notebooks_archive/: analysis.ipynb  cleaning.ipynb  minutes of magic.pbix  scraping.ipynb
scripts/: 01_scraping.py  02_cleaning.py  03_analysis.py  __init__.py  run_pipeline.py
scripts/data_platform/: scrape_upl_matches.py
scripts/features/feature_01_goal_timing/: build_goal_timing_dataset.py
src/: analysis.py  cleaning.py  config.py  dataset.py  features.py  plots.py
